After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751865 - changes to locale.conf aren't reflected on logout
changes to locale.conf aren't reflected on logout
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2015-07-02 21:29 UTC by Ray Strode [halfline]
Modified: 2015-07-02 21:29 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
session: load locale.conf from gdm-session.c (15.64 KB, patch)
2015-07-02 21:29 UTC, Ray Strode [halfline]
committed Details | Review

Description Ray Strode [halfline] 2015-07-02 21:29:01 UTC
Downstream report:

Version-Release number of selected component (if applicable):
RHEL-7.0-20140109.n.0

Steps to Reproduce: 
Launch Region and Language (Settings -> Region and Language)

 1. Click on "Login Screen".
 2. Click on Language
 3. Select any language
 4. Log out.

Actual results: 
After logout, only "Password:" string is translated. I have to restart gdm.service to get translations of other strings like buttons in user list and menus at top of screen.

Expected results:
GDM interface should be in the language you specified.
Comment 1 Ray Strode [halfline] 2015-07-02 21:29:23 UTC
Created attachment 306666 [details] [review]
session: load locale.conf from gdm-session.c

Right now we're not picking up changes to locale.conf completely
at runtime.

This commit moves reading locale.conf to a different place in the
code, so that it's more effectively read and used.
Comment 2 Ray Strode [halfline] 2015-07-02 21:29:41 UTC
Attachment 306666 [details] pushed as cab736c - session: load locale.conf from gdm-session.c