session: load locale.conf from gdm-session.c

Right now we're not picking up changes to locale.conf completely
at runtime.

This commit moves reading locale.conf to a different place in the
code, so that it's more effectively read and used.

https://bugzilla.gnome.org/show_bug.cgi?id=751865